infra/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-external
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
